# MyJniCmake

./: .gitattributes  README.md
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/androidTest/java/com/zhangpan/myjnicmake/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: JNIEnv.c  file_encryption.c  file_patch.c  native-lib.cpp  zhangpan.c
app/src/main/java/com/zhangpan/myjnicmake/: Animal.java  AppStartActivity.java  Cat.java  Encryptor.java  FileEncryptionActivity.java  FilePatchActivity.java  FilePatchUtil.java  MainActivity.java
app/src/main/res/layout/: activity_app_start.xml  activity_file_encryption.xml  activity_file_patch.xml  activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/zhangpan/myjnicmake/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
